--- a/Odin/Content/css/transferee/intake.scss
+++ b/Odin/Content/css/transferee/intake.scss
@@ -30,9 +30,9 @@ div#intake {
         padding-top: 35px;
         padding-bottom: 35px;
 
-        .intake-header {            
-            h5{
-                margin-top:0px
+        .intake-header {
+            h5 {
+                margin-top: 0px
             }
 
             span {
@@ -44,9 +44,9 @@ div#intake {
 
         .intake-row {
 
-            padding-top:15px;
-
             .intake-col {
+                padding-top: 15px;
+
                 label {
                     display: block;
                     font-size: medium;
@@ -62,6 +62,14 @@ div#intake {
                     color: $DW_Blue;
                     font-size: small;
                     display: none;
+                }
+
+                textarea {
+                    display: none;
+                    width: 100%;
+                    max-width: 100%;
+                    color: $DW_Blue;
+                    font-size: small;
                 }
             }
         }
