--- a/Odin/Views/Orders/Index.cshtml
+++ b/Odin/Views/Orders/Index.cshtml
@@ -13,8 +13,9 @@
                 <tr>
                     <th class="first">
                         <div>
-                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png"/>
-                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow up name" src="~/Content/Images/icn_up_arrow.png"/>
+                            <img class="arrow down name noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow upsel name noinit" src="~/Content/Images/icn_up_sel_arrow.png" />
                         </div>
                         <p>Transferee</p>
                     </th>
@@ -23,36 +24,42 @@
                     </th>
                     <th class="third">
                         <div>
-                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow up date"  data-field="lastContacted" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down date noinit"  data-field="lastContacted" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow upsel date noinit" data-field="lastContacted" src="~/Content/Images/icn_up_sel_arrow.png" />
                         </div>
                         <p>Last Contacted</p>
                     </th>
                     <th class="fourth">
-                        <div>
+<!-- until sorting is decided-->
+                        <div style="display: none">
                             <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
                             <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow upsel noinit" src="~/Content/Images/icn_up_sel_arrow.png" />
                         </div>
-                        <p>Manager</p>
+                        <p style="padding-top: 13px">Manager</p>
                     </th>
                     <th class="fifth">
                         <div>
-                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow up date" data-field="preTrip" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down date noinit" data-field="preTrip" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow upsel date noinit" data-field="preTrip" src="~/Content/Images/icn_up_sel_arrow.png" />
                         </div>
                         <p>PreTrip</p>
                     </th>
                     <th class="sixth">
                         <div>
-                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow up date"  data-field="finalArrival" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down date noinit"  data-field="finalArrival" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow upsel date noinit" data-field="finalArrival" src="~/Content/Images/icn_up_sel_arrow.png" />
                         </div>
                         <p>Final Arrival</p>
                     </th>
                     <th class="seventh">
                         <div>
-                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow up number" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down number noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow upsel number noinit" src="~/Content/Images/icn_up_sel_arrow.png" />
                         </div>
                         <p>Notification</p>
                     </th>
@@ -66,22 +73,26 @@
                 <tr>
                     <th class="first">
                         <div>
-                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow up name" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down name noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow upsel name noinit" src="~/Content/Images/icn_up_sel_arrow.png" />
                         </div>
                         <p>Transferee</p>
                     </th>
                     <th class="second">
-                        <div>
+<!-- until sorting is decided-->
+                        <div style="display: none">
                             <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
                             <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow upsel noinit" src="~/Content/Images/icn_up_sel_arrow.png" />
                         </div>
-                        <p>Manager</p>
+                        <p style="padding-top: 13px">Manager</p>
                     </th>
                     <th class="third">
                         <div>
-                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow up date"  data-field="lastContacted" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down date noinit"  data-field="lastContacted" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow upsel date noinit" data-field="lastContacted" src="~/Content/Images/icn_up_sel_arrow.png" />
                         </div>
                         <p>Last Contacted</p>
                     </th>
@@ -90,8 +101,9 @@
                     </th>
                     <th class="fifth">
                         <div>
-                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow up number" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down number noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow upsel number noinit" src="~/Content/Images/icn_up_sel_arrow.png" />
                         </div>
                         <p>Notification</p>
                     </th>
@@ -105,22 +117,25 @@
                 <tr>
                     <th class="first">
                         <div>
-                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow up name" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down name noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow upsel name noinit" src="~/Content/Images/icn_up_sel_arrow.png" />
                         </div>
                         <p>Transferee</p>
                     </th>
                     <th class="second">
                         <div>
-                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow up date"  data-field="lastContacted" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down date noinit"  data-field="lastContacted" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow upsel date noinit" data-field="lastContacted" src="~/Content/Images/icn_up_sel_arrow.png" />
                         </div>
                         <p>Last Contacted</p>
                     </th>
                     <th class="third">
                         <div>
-                            <img class="arrow up" src="~/Content/Images/icn_up_arrow.png" />
-                            <img class="arrow down noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow up number" src="~/Content/Images/icn_up_arrow.png" />
+                            <img class="arrow down number noinit" src="~/Content/Images/icn_down_arrow.png" />
+                            <img class="arrow upsel number noinit" src="~/Content/Images/icn_up_sel_arrow.png" />
                         </div>
                         <p>Notification</p>
                     </th>
