--- a/Odin/Content/css/transferee/intake.css
+++ b/Odin/Content/css/transferee/intake.css
@@ -17,10 +17,16 @@
     padding-bottom: 35px; }
     div#intake .intake-block .intake-header h5 {
       margin-top: 0px; }
-    div#intake .intake-block .intake-header span {
-      font-size: small;
+    div#intake .intake-block .intake-header .intake-edit {
+      font-size: medium;
       color: #a7ce39;
       cursor: pointer; }
+    div#intake .intake-block .intake-header .intake-cancel {
+      display: none;
+      font-size: medium;
+      color: #e53c2e;
+      cursor: pointer;
+      padding-left: 15px; }
     div#intake .intake-block .intake-row .intake-col {
       padding-top: 15px; }
       div#intake .intake-block .intake-row .intake-col label {
@@ -30,10 +36,23 @@
       div#intake .intake-block .intake-row .intake-col span {
         color: #31a4dd;
         font-size: small; }
+      div#intake .intake-block .intake-row .intake-col .intake-add {
+        font-size: medium;
+        color: #a7ce39;
+        cursor: pointer; }
+      div#intake .intake-block .intake-row .intake-col .intake-delete {
+        font-size: medium;
+        color: #e53c2e;
+        cursor: pointer; }
       div#intake .intake-block .intake-row .intake-col input {
         color: #31a4dd;
         font-size: small;
-        display: none; }
+        display: none;
+        width: 100%;
+        min-width: 100%; }
+      div#intake .intake-block .intake-row .intake-col .intake-service-input {
+        display: block;
+        line-height: 20px; }
       div#intake .intake-block .intake-row .intake-col textarea {
         display: none;
         width: 100%;
