Added bootstrap datetimepicker and helpers to use it.

--- a/Odin/Content/css/transferee/details.css
+++ b/Odin/Content/css/transferee/details.css
@@ -1,1 +1,52 @@
-﻿
+﻿div#details {
+  padding-top: 10px;
+  padding-left: 20px; }
+  div#details div.row {
+    text-align: left; }
+  div#details .details-title P {
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    font-size: 18px;
+    color: #231F20; }
+  div#details hr {
+    margin-top: 0px;
+    margin-bottom: 0px; }
+  div#details .details-blue {
+    color: #31a4dd; }
+  div#details .details-lime {
+    color: #a7ce39; }
+  div#details .details-block {
+    padding-top: 15px;
+    padding-bottom: 15px; }
+    div#details .details-block .details-header P {
+      margin: 0px;
+      font-size: 15px;
+      font-weight: bold;
+      color: #8E1A55; }
+    div#details .details-block .details-header span {
+      font-size: small;
+      color: #a7ce39;
+      cursor: pointer; }
+    div#details .details-block .details-row .details-col {
+      padding-top: 15px;
+      padding-left: 0px;
+      width: 16%; }
+      div#details .details-block .details-row .details-col label {
+        display: block;
+        font-size: 14px;
+        margin-bottom: -5px;
+        color: #858585; }
+      div#details .details-block .details-row .details-col span {
+        color: #31a4dd;
+        font-size: 14px; }
+      div#details .details-block .details-row .details-col input {
+        color: #31a4dd;
+        font-size: small;
+        display: none; }
+      div#details .details-block .details-row .details-col textarea {
+        display: none;
+        width: 100%;
+        max-width: 100%;
+        color: #31a4dd;
+        font-size: small; }
+
