--- a/Odin/Content/css/transferee/transferee.scss
+++ b/Odin/Content/css/transferee/transferee.scss
@@ -152,7 +152,7 @@ div.row {
 
     div.col {
         border-top: 1px solid;
-
+        font-family:sans-serif;
         div.noinit {
             display: none;
         }
