Refactoring add child

--- a/Odin/Content/css/transferee/intake.css
+++ b/Odin/Content/css/transferee/intake.css
@@ -40,7 +40,7 @@
         font-size: medium;
         color: #a7ce39;
         cursor: pointer; }
-      div#intake .intake-block .intake-row .intake-col .intake-delete {
+      div#intake .intake-block .intake-row .intake-col .intake-del {
         font-size: medium;
         color: #e53c2e;
         cursor: pointer; }
