--- a/Odin/Content/css/transferee/intake.scss
+++ b/Odin/Content/css/transferee/intake.scss
@@ -72,7 +72,7 @@ div#intake {
                     cursor: pointer;
                 }
 
-                .intake-delete {
+                .intake-del {
                     font-size: medium;
                     color: $DW_Red;
                     cursor: pointer;
