--- a/Odin/Content/css/transferee/intake.scss
+++ b/Odin/Content/css/transferee/intake.scss
@@ -35,7 +35,7 @@ div#intake {
                 margin-top: 0px
             }
 
-            .intake-edit {
+            .intake-edit, .intake-save {
                 font-size: medium;
                 color: $DW_Lime;
                 cursor: pointer;
