--- a/Odin/Views/Orders/Partials/_Intake.cshtml
+++ b/Odin/Views/Orders/Partials/_Intake.cshtml
@@ -213,14 +213,14 @@
         </div>
         <div class="row intake-row collapse in">
             <div class="col-sm-9 intake-col">
-                <span class="intake-add" data-add="child">+Add Child</span>
+                <span class="intake-add" data-entity-add="children">+Add Child</span>
             </div>
         </div>
         @if (@Model.Children.Count() > 0)
         {
             for (int i = 0; i < @Model.Children.Count(); i++)
              {
-                 <div class="row intake-row collapse in" data-entity-id="@Model.Children.ElementAt(i).Id" data-entity-collection="Children">
+                 <div class="row intake-row collapse in" data-entity-id="@Model.Children.ElementAt(i).Id" data-entity-collection="children">
                      <div class="col-sm-3 intake-col">
                          <label>Child:</label>
                          <span>@Model.Children.ElementAt(i).Name</span>
@@ -246,34 +246,6 @@
                      </div>
                  </div>
              }
-        }
-        else
-        { 
-            <div class="row intake-row collapse in" data-entity-collection="Children" data-entity-temp-id="@Guid.NewGuid()">
-                <div class="col-sm-3 intake-col">
-                    <label>Child:</label>
-                    <span></span>
-                    <input type="text" class="form-control" name="Name"/>
-                    <input type="hidden" name="Name" />
-                </div>
-                <div class="col-sm-3 intake-col">
-                    <label>Age:</label>
-                    <span></span>
-                    <input type="text" class="form-control" name="Age"/>
-                    <input type="hidden" name="Age" />
-                </div>
-                <div class="col-sm-3 intake-col">
-                    <label>Grade:</label>
-                    <span></span>
-                    <input type="text" class="form-control" name="Grade"/>
-                    <input type="hidden" name="Grade" />
-                </div>
-                <div class="col-sm-3 intake-col">
-                    <span class="intake-add">
-                        + Add
-                    </span>
-                </div>
-            </div>
         }
         <div class="row intake-row collapse in">
             <div class="col-sm-9 intake-col">
@@ -312,37 +284,47 @@
             </div>
         </div>
     </div>
-    <div class="intake-block">
+    <div class="intake-block" data-block="services">
         <div class="row intake-header">
             <h5>
                 <span class="intake-collapse">
                     <img class="intake-collapse-img" src="/Content/Images/collapse.png" />
                     Services
                 </span>
+                <span class="intake-save">
+                    - Save
+                </span>
             </h5>
         </div>
-        <div class="row intake-row collapse in">
-            <div class="col-sm-1 intake-col">
-                <input type="checkbox" class="intake-service-input"/>
+        @for(int i = 0; i < @Model.Services.Count(); i++)
+        {
+            <div class="row intake-row collapse in" data-entity-id="@Model.Services.ElementAt(i).Id" data-entity-collection="services">
+                <div class="col-sm-1 intake-col">
+                    <input type="checkbox" class="intake-service-input" name="Selected"  @Model.Services.ElementAt(i).Selected ? checked ="checked" : String.Empty/>
+                </div>
+                 <div class="col-sm-5 intake-col">
+                    <span>@Model.Services.ElementAt(i).Name</span>
+                </div>
+                <div class="col-sm-5 intake-col">
+                    @Html.TextBoxFor(s => @Model.Services.ElementAt(i).Notes, new { @class = "form-control intake-service-input" })
+                </div>
             </div>
-            <div class="col-sm-5 intake-col">
-                <span>Some text</span>
+            
+        }
+        @for(int i = 0; i < @Model.PossibleServices.Count(); i++)
+        {
+            <div class="row intake-row collapse in" data-entity-collection="services" data-entity-type-id="@Model.PossibleServices.ElementAt(i).Id">
+                <div class="col-sm-1 intake-col">
+                    <input type="checkbox" value="false" class="intake-service-input" name="Selected"/>
+                </div>
+                <div class="col-sm-5 intake-col">
+                    <span>@Model.PossibleServices.ElementAt(i).Name</span>
+                </div>
+                <div class="col-sm-5 intake-col">
+                    <input type="text" name="Notes" class="form-control"/>    
+                </div>
             </div>
-            <div class="col-sm-5 intake-col">
-                <input type="text" placeholder="Notes" class="form-control intake-service-input"/>
-            </div>
-        </div>
-        <div class="row intake-row collapse in">
-            <div class="col-sm-1 intake-col">
-                <input type="checkbox" class="intake-service-input"/>
-            </div>
-            <div class="col-sm-5 intake-col">
-                <span>Some text</span>
-            </div>
-            <div class="col-sm-5 intake-col">
-                <input type="text" placeholder="Notes" class="form-control intake-service-input"/>
-            </div>
-        </div>
+        }
     </div>
     
 </div>
