--- a/Odin/Content/bootstrap-datetimepicker.css
+++ b/Odin/Content/bootstrap-datetimepicker.css
@@ -3,8 +3,16 @@
  * version : 4.17.45
  * https://github.com/Eonasdan/bootstrap-datetimepicker/
  */
+.custom-icon-check {
+    background-image: url(Images/check.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+#scheduledServices .btn-primary {
+    border-radius: 50%;
+}
 .bootstrap-datetimepicker-widget {
-  list-style: none;
+    list-style: none;
 }
 .bootstrap-datetimepicker-widget.dropdown-menu {
     font-family: sans-serif;   
@@ -12,8 +20,8 @@
     font-weight:200;
         display: block;
         margin: 2px 0;
-        padding: 4px;
-        width: 19em;        
+        padding:0px 2px;
+        width: 17em;        
     }
 @media (min-width: 768px) {
   .bootstrap-datetimepicker-widget.dropdown-menu.timepicker-sbs {
@@ -220,8 +228,7 @@
   width: 100%;
 }
 .bootstrap-datetimepicker-widget table {
-  width: 100%;
-  margin: 0;
+  width: 100%; 
 }
 .bootstrap-datetimepicker-widget table td,
 .bootstrap-datetimepicker-widget table th {
@@ -335,9 +342,12 @@
   cursor: pointer;
   border-radius: 50%;
 }
-.bootstrap-datetimepicker-widget table td span:hover {
-  background: #eeeeee;
-}
+    .bootstrap-datetimepicker-widget table td span:hover {
+        background-color: #eeeeee;
+        background-image: url(Images/check.png);
+        background-repeat: no-repeat;
+        background-position: center;
+    }
 .bootstrap-datetimepicker-widget table td span.active {
   background-color: #337ab7;
   color: #fff;
@@ -362,8 +372,8 @@
 .bootstrap-datetimepicker-widget .datepicker-decades .decade {
   line-height: 1.8em !important;
 }
-.input-group.date .input-group-addon {
-  cursor: pointer;
+.input-group.date .input-group-addon, .input-group.time .input-group-addon {
+    cursor: pointer;
 }
 .sr-only {
   position: absolute;
