--- a/Odin/Views/Account/Login.cshtml
+++ b/Odin/Views/Account/Login.cshtml
@@ -43,8 +43,7 @@
         @Html.Partial("~/Views/Shared/Partials/_logo.cshtml")
     </div>
     <div class="col">
-        <img src="~/Content/Images/bg_image.png"/>
-        <img id="gradient" src="~/Content/Images/bg_gradient_login.png" />
+        <img src="~/Content/Images/login.jpg"/>
         <div id="labels-box">
             <div class="text-lables">
                 <p>We make</p>
