--- a/Odin/Views/Orders/Partials/_History.cshtml
+++ b/Odin/Views/Orders/Partials/_History.cshtml
@@ -1,3 +1,5 @@
-﻿<div id="history" class="noinit">
+﻿<div id="history" class="frame noinit">
     <h2>History Panel</h2>
 </div>
+
+@Styles.Render("~/Styling/history")
