--- a/Odin/Views/Orders/Partials/_Intake.cshtml
+++ b/Odin/Views/Orders/Partials/_Intake.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Odin.ViewModels.Orders.Transferee.OrdersTransfereeViewModel
 
-<div id="intake">
+<div id="intake" class="frame">
     <div class="row intake-title">
         <h4>Intake</h4>
         <span class="intake-blue">Please fill out any items that are not already auto-generated that could aid in the help of your clients placement.</span>
@@ -206,4 +206,5 @@
         </div>
     </div>
 </div>
+
 @Styles.Render("~/Styling/intake")
