--- a/Odin/Views/Orders/Partials/_Messages.cshtml
+++ b/Odin/Views/Orders/Partials/_Messages.cshtml
@@ -1,3 +1,5 @@
-﻿<div id="messages" class="noinit">
+﻿<div id="messages" class="frame noinit">
     <h2>Messages Panel</h2>
 </div>
+
+@Styles.Render("~/Styling/messages")
