--- a/Odin/Content/css/login.css
+++ b/Odin/Content/css/login.css
@@ -26,6 +26,8 @@ div.container.body-content {
         color: #49ae44; }
   div.container.body-content div.col {
     width: 66%;
+    max-height: 884px;
+    overflow: hidden;
     position: relative;
     display: inline-block; }
     @media screen and (max-width: 992px) {
@@ -34,14 +36,7 @@ div.container.body-content {
     div.container.body-content div.col p {
       margin: 0px; }
     div.container.body-content div.col img {
-      width: 100%;
-      opacity: 0.5; }
-      div.container.body-content div.col img:nth-child(2) {
-        top: 0px;
-        opacity: 0.7;
-        position: fixed; }
-        div.container.body-content div.col img:nth-child(2).IEorEdge {
-          left: 33.7%; }
+      width: 223%; }
     div.container.body-content div.col div#labels-box {
       color: white;
       position: absolute;
