--- a/Odin/Views/Orders/Transferee.cshtml
+++ b/Odin/Views/Orders/Transferee.cshtml
@@ -3,29 +3,32 @@
     Layout = "~/Views/Shared/_Common.cshtml";
 }
 
-<div class="row">
+<div id="transferee" class="row">
     <div class="col-md-2">
         <img src="~/Content/Images/icn_person.png"/>
         <p>Victoria A. Sporer</p>
+        <span class="hdr">Domestic | VIP</span><br />
+        <span class="hdr">Acme</span><br />
+        <span class="hdr">Road Runner LLC.</span>
         <ul>
             <li class="unselectable">&nbsp;</li>
             <li class="item selected" data-panel="intake"><img src="~/Content/Images/icn_intake.png"/><span>Intake</span></li>
             <li class="item" data-panel="details"><img src="~/Content/Images/icn_details.png"/><span>Details</span></li>
-            <li class="item" data-panel="rentals"><img src="~/Content/Images/icn_rentals.png"/><span>Rentals</span></li>
+            <li class="item" data-panel="housing"><img src="~/Content/Images/icn_housing.png"/><span>Housing</span></li>
             <li class="item" data-panel="history"><img src="~/Content/Images/icn_history.png"/><span>History</span></li>
             <li class="unselectable">&nbsp;</li>
             <li class="unselectable">&nbsp;</li>
             <li class="item" data-panel="messages"><img src="~/Content/Images/icn_internal_messages.png"/><span>Messages</span></li>
-            <li class="item" data-panel="calendar"><img src="~/Content/Images/icn_internal_calendar.png"/><span>Calendar</span></li>
+            <li class="item" data-panel="itinerary"><img src="~/Content/Images/icn_internal_itinerary.png"/><span>Itinerary</span></li>
         </ul>
     </div>
-    <div class="col col-md-10">
+    <div class="col">
         @Html.Partial("~/Views/Orders/Partials/_Intake.cshtml")
         @Html.Partial("~/Views/Orders/Partials/_Details.cshtml")
-        @Html.Partial("~/Views/Orders/Partials/_Rentals.cshtml")
+        @Html.Partial("~/Views/Orders/Partials/_Housing.cshtml")
         @Html.Partial("~/Views/Orders/Partials/_History.cshtml")
         @Html.Partial("~/Views/Orders/Partials/_Messages.cshtml")
-        @Html.Partial("~/Views/Orders/Partials/_Calendar.cshtml")
+        @Html.Partial("~/Views/Orders/Partials/_Itinerary.cshtml")
     </div>
 </div>
 
